# dhlab-app-corpus-webapp

./: .cloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
docs/: main.md
src/dhlab_corpus_webapp/: __init__.py  app.py  corpus.py  export.py  test_app.py
src/dhlab_corpus_webapp/static/: MultiSelect.css  MultiSelect.js  base_app_styles.css  collocations.css  corpusapp_styles.css  dataTable.css  disable_enable_fields.js  nb_styles.css  styles.css  tableinitializer.js
src/dhlab_corpus_webapp/static/css/: dataTable.css  dataTable_overrides.css  grids.css  multiselect.css  nb_styles.css  styles.css
src/dhlab_corpus_webapp/static/data/: languages.json
src/dhlab_corpus_webapp/static/js/: disable_enable_fields.js  htmx_events.js  multiselect.js  tableinitializer.js
src/dhlab_corpus_webapp/templates/: banner.html  base.html  collocation_readme.md  collocation_results.html  concordance_results.html  corpus_builder.html  corpus_readme.md  corpus_uploader.html  index.html  index_base.html  langs.html  readme.html  search-collocation.html  search-concordance.html  search_form_text.html  table.html  upload_corpus_feedback.html
src/dhlab_corpus_webapp/templates/components/: banner.html  head.html
src/dhlab_corpus_webapp/templates/corpus_definition/: build_corpus.html  upload_corpus.html
src/dhlab_corpus_webapp/templates/exploration_methods/: collocations.html  concordance.html  table.html
src/dhlab_corpus_webapp/templates/outputs/: collocations.html  concordance.html  table.html
