[project]
name = "dhlab-corp-conc-coll-webapp"
version = "0.1.0"
description = "App to build corpus, collocations and concordances from NLN's digital collections"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Thea Tollersrud", email = "thea.tollersrud@nb.no"},
    {name = "Marie Roald", email = "marie.roald@nb.no"},
]
dependencies = [
    "dhlab>=2.41.0",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja-partials>=0.2.1",
    "jinja2>=3.1.4",
    "whitenoise>=6.9.0",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhlab_corpus_webapp"]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]
